--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+<title>
+Welcome
+</title>
+</head><!doctype html>  
+<html lang="en">
+  <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRGG7NC90C"></script>
 <script>
@@ -7,3 +15,5 @@
 
   gtag('config', 'G-FRGG7NC90C');
 </script>
+</head>
+</html>  
